# portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: auth.py  config.py  database.py  logging.py  main.py  models.py  schemas.py  uploads.py
backend/app/routers/: admin_projects.py  appointments.py  auth.py  contact.py  education.py  experiences.py  profile.py  projects.py  skills.py
backend/app/routers/admin/: appointments.py  availability.py  categories.py  contact.py  education.py  experiences.py  profile.py  projects.py  skills.py
backend/migrations/: env.py
backend/migrations/versions/: 01b07fb254c9_initial_schema.py  141827b29fdc_add_availabilityslot_and_appointment_.py  363f4e5a1161_make_appointment_subject_and_message_.py  8895f92000c0_add_project_categories.py  8e7c653cc854_replace_avatar_url_and_resume_url_with_.py  aaa0815b4958_add_is_alternance_and_experience_id_to_.py  c1bedca371d3_add_social_links_model.py  d85708a00d9a_add_repository_url_to_project.py
backend/tests/: conftest.py  test_main.py
backend/tests/routers/: test_admin_projects.py  test_appointments.py  test_auth.py  test_contact.py  test_education.py  test_experiences.py  test_profile.py  test_projects.py  test_skills.py
backend/tests/routers/admin/: test_appointments.py  test_availability.py  test_categories.py  test_contact.py  test_education.py  test_experiences.py  test_profile.py  test_projects.py  test_skills.py
docs/: coolify-setup.md  release-process.md
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/app/[locale]/admin/: layout.tsx  page.tsx
frontend/app/[locale]/admin/(auth)/: layout.tsx
frontend/app/[locale]/admin/(auth)/login/: page.tsx
frontend/app/[locale]/admin/(dashboard)/: layout.tsx  page.tsx
frontend/app/[locale]/admin/(dashboard)/contact/: page.tsx
frontend/app/[locale]/admin/(dashboard)/education/: page.tsx
frontend/app/[locale]/admin/(dashboard)/experiences/: page.tsx
frontend/app/[locale]/admin/(dashboard)/profile/: page.tsx
frontend/app/[locale]/admin/login/: page.tsx
frontend/app/[locale]/admin/projects/: page.tsx
frontend/app/[locale]/admin/skills/: page.tsx
frontend/app/[locale]/contact/: ContactForm.tsx  page.tsx
frontend/app/[locale]/education/: page.tsx
frontend/app/[locale]/experiences/: page.tsx
frontend/app/[locale]/projects/: page.tsx
frontend/app/[locale]/projects/[slug]/: page.tsx
frontend/app/[locale]/skills/: page.tsx
frontend/app/admin/: LogoutButton.tsx  layout.tsx  page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/admin/projects/: page.tsx
frontend/app/admin/projects/new/: page.tsx
frontend/app/admin/skills/: page.tsx
frontend/app/admin/skills/new/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/contact/: ContactForm.tsx  page.tsx
frontend/app/experiences/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[slug]/: page.tsx
frontend/app/skills/: page.tsx
frontend/components/: LocaleSwitcher.tsx  Nav.tsx  TerminalMockup.tsx
frontend/components/admin/: LoginForm.tsx  LogoutButton.tsx  StatCard.tsx
frontend/components/admin/contact/: ContactTable.tsx
frontend/components/admin/education/: EducationForm.tsx  EducationTable.tsx
frontend/components/admin/experiences/: ExperienceForm.tsx  ExperienceTable.tsx
frontend/components/admin/profile/: ProfileForm.tsx
frontend/components/admin/projects/: ProjectForm.tsx  ProjectsTable.tsx
frontend/components/admin/skills/: SkillForm.tsx  SkillsTable.tsx
frontend/components/icons/: LinkedinIcon.tsx  PlatformIcon.tsx
frontend/lib/: admin.ts  api.ts  auth.client.ts  auth.ts
frontend/messages/: en.json  fr.json
frontend/types/: api.ts
(+12 files in other folders)
